applications/bento-pdf/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: bento-pdf
  namespace: bento-pdf

spec:
  selector:
    app: bento-pdf
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
