applications/bento-pdf/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: bento-pdf
  namespace: bento-pdf
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 50m

spec:
  ingressClassName: nginx
  rules:
    - host: bento-pdf.prosto.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bento-pdf
                port:
                  number: 80
